--- a/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
+++ b/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
@@ -96,6 +96,10 @@
           <nb-icon class="action-icon" icon="attach-outline"></nb-icon>
           <span>Ver comprovante</span>
         </nb-action>
+        <nb-action>
+          <nb-icon class="action-icon" icon="phone-call-outline" (click)="abrirConsulta()"></nb-icon>
+          <span>Registrar  atendimento</span>
+        </nb-action>
       </nb-actions>
     </nb-card-body>
   </nb-card>
