--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,72 +1,34 @@
-<div class="row">
+<div class="text-center">
   <div class="col-md-12 col-xs-12">
-    <nb-card class="inline-form-card">
-      <nb-card-body>
-        <form id="form-cadastro-medico" [formGroup]="formLogin">
-          <div class="col-md-12 col-xs-12">
-            <div class="form-row">
-              <div >
-                <div class="form-group">
-                  <img class="text-center" src="assets/images/login_aditi.png" />
-                </div>               
-                <div class="form-group">
-                  <div class="title">
-                    Entrar
-                  </div>                  
-                </div>                
-                <div class="form-group">
-                  <p>Digite login e senha para acessar conta.</p>
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputEmail1" class="label">CPF/CNPJ</label>
-                  <input class="form-control" name="login" id="login" type="email" formControlName="login" nbInput
-                    fullWidth placeholder="CPF/CNPJ" />
-                </div>
-                <div class="form-group">
-                  <label for="password" class="label">Senha</label>                  
-                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="30"
-                    nbInput fullWidth placeholder="Senha">
-                </div>
-                <div class="form-group">
-                  <div class="text-center">
-                    <a class="label col-form-label" href="#" target="_blank">Esqueceu sua senha?</a>
-                  </div>
-                  
-                  <!--<nb-checkbox>Lembre de mim</nb-checkbox>-->
-                </div>
-                <div class="form-group">
-                  <div class="login_btn">
-                    <button type="button" class="btn btn-primary nb-custom-message-full-width"
-                      (click)="login()">Entrar</button>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="login_btn">
-                    <button type="button" class="btn btn-success nb-custom-message-full-width"
-                      (click)="register()">Cadastrar</button>
-                  </div>
-                </div>
+    <div class="row">
+      <div class="col-md-12 col-xs-12">
+        <nb-card>
+          <div class="dialog-body sidebar-header">
+            <form class="login" method="post" name="login" id="login" [formGroup]="formLogin">
+              <div class="m-lg-n4 text-center">
+                <img class="p-4" style="height: 255px; width: 450px;" src="assets/images/login_aditi.png" id="icon"
+                  alt="User Icon" />
               </div>
-              <div class="col-md-8">
-                <div class="form-group">
-                  <div class="text-center">
-                    <img class="d-none d-sm-block img-fluid mx-auto d-block" src="assets/images/login_img.png" />
-                  </div>
-                </div>
+              <p>Digite login e senha para acessar conta.</p>
+              <div class="text-center">
+                <input type="text" formControlName="login" id="login" class="fadeIn second" name="login"
+                  placeholder="Login" maxlength="80" autocomplete="off" />
               </div>
-              <div class="row" *ngIf="isActive" class="loader">
-                <div class="text-center" style="margin-top: -490px;margin-left: 580px;">
-                  <button class="btn btn-primary" type="button" disabled>
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    Carregando...
-                  </button>
-                </div>
+              <div class="text-center">
+                <input type="password" formControlName="password" id="password" class="fadeIn third" name="password"
+                  placeholder="Senha" maxlength="100" autocomplete="off" />
               </div>
-            </div>
+              <input type="submit" class="fade_8S" style="width: 250px;" name="login" value="Entrar" (click)="login()">
+              <div class="linksForm">
+                <a href="#" class="fade_4S" title="Resgatar Senha"><nb-icon class="fade_4S"
+                    icon="refresh-outline"></nb-icon>Resgatar Senha</a>
+                <a href="#/cadastro" class="fade_4S" title="Cadastrar-se"><nb-icon class="fade_4S"
+                    icon="file-add-outline"></nb-icon>Cadastro</a>
+              </div>
+            </form>
           </div>
-        </form>
-      </nb-card-body>
-    </nb-card>
-
+        </nb-card>
+      </div>
+    </div>
   </div>
 </div>
