Ajuste tela novo atendimento

--- a/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
+++ b/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
@@ -80,7 +80,7 @@
                             <nb-card-body>
                                 <div class="form-row align-items-center">
                                     <div class="form-group col-md-2">
-                                        <label for="tempoRetorno">Tempo retorno</label>
+                                        <label for="tempoRetorno">Tempo retorno(Dias)</label>
                                         <input class="form-control" name="tempoRetorno" id="tempoRetorno" type="text"
                                             formControlName="tempoRetorno" (keypress)="number($event)" disabled/>
                                     </div>
