--- a/src/app/pages/configurar-agenda/gerar-qr-code/gerar-qr-code.component.html
+++ b/src/app/pages/configurar-agenda/gerar-qr-code/gerar-qr-code.component.html
@@ -15,7 +15,7 @@
                   <div class="form-group col-md-4">
                     <div class="form-group">
                       <div class="div-medico">
-                        <label for="nome">Escolha o médico a ser consultado</label>
+                        <label for="nome">Escolha o médico*</label>
                         <select class="form-control" formControlName="medico"
                           (change)="verificaValor($event.target.value)">
                           <option value="null" selected>SELECIONE</option>
