--- a/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
+++ b/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
@@ -66,7 +66,7 @@
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-4">
-                      <label for="nome">Escolha o médico do paciente</label>
+                      <label for="nome">Escolha o médico*</label>
                       <select class="form-control" formControlName="medico" 
                       (change)="verificaMedico($event.target.value)">
                         <option value="null" selected>SELECIONE</option>
