--- a/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
+++ b/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
@@ -82,7 +82,7 @@
                                     <div class="form-group col-md-2">
                                         <label for="tempoRetorno">Tempo retorno(Dias)</label>
                                         <input class="form-control" name="tempoRetorno" id="tempoRetorno" type="text"
-                                            formControlName="tempoRetorno" (keypress)="number($event)" disabled/>
+                                            formControlName="tempoRetorno" (keypress)="number($event)" disabled />
                                     </div>
                                     <div class="form-group col-md-2">
                                         <label for="altura">Altura</label>
@@ -92,17 +92,17 @@
                                     <div class="form-group col-md-2">
                                         <label for="peso">Peso</label>
                                         <input class="form-control" name="peso" id="peso" type="text"
-                                            formControlName="peso" (keypress)="number($event)" disabled />
+                                            formControlName="peso" disabled />
                                     </div>
                                     <div class="form-group col-md-2">
                                         <label for="circCabeca">Circ cabeça</label>
                                         <input class="form-control" name="circCabeca" id="circCabeca" type="text"
-                                            formControlName="circCabeca" (keypress)="number($event)" disabled />
+                                            formControlName="circCabeca" disabled />
                                     </div>
                                     <div class="form-group col-md-2">
                                         <label for="circAbdomen">Circ abdomen</label>
                                         <input class="form-control" name="circAbdomen" id="circAbdomen" type="text"
-                                            formControlName="circAbdomen" (keypress)="number($event)" disabled />
+                                            formControlName="circAbdomen" disabled />
                                     </div>
                                 </div>
                             </nb-card-body>
@@ -155,7 +155,7 @@
                         </nb-card>
                         <nb-card>
                             <nb-card-body>
-                                <div class="form-row">
+                                <div class="form-row align-items-center">
                                     <div class="col-lg-12">
                                         <div class="input-medica">
                                             <div><label>Prescrição </label></div>
@@ -168,12 +168,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </nb-card-body>
-                        </nb-card>
-                        <nb-card>
-                            <nb-card-body>
                                 <div class="form-row align-items-center">
-                                    <div class="form-group col-md-6">
+                                    <div class="col-lg-12">
                                         <div class="input-box">
                                             <label for="detalhesInterno">Detalhes(Interno):</label>
                                             <textarea class="form-control" rows="3" formControlName="detalhesInterno"
@@ -184,7 +180,9 @@
                                                 quantidade máxima de caracteres</p>
                                         </div>
                                     </div>
-                                    <div class="form-group col-md-6">
+                                </div>
+                                <div class="form-row align-items-center">
+                                    <div class="col-lg-12">
                                         <div class="input">
                                             <label for="detalhesCliente">Detalhes(cliente):</label>
                                             <textarea class="form-control" rows="3" formControlName="detalhesCliente"
@@ -230,7 +228,7 @@
                                                     {{ row.cpf }}
                                                 </div>
                                             </ng-template>
-                                        </ngx-datatable-column>                                      
+                                        </ngx-datatable-column>
                                         <ngx-datatable-column name="Data" prop="dataNascimento">
                                             <ng-template ngx-datatable-cell-template let-row="row">
                                                 <div class="text-center">
