--- a/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
@@ -12,7 +12,7 @@
                 <div class="form-row align-items-center">
                   <div class="form-group col-md-4">
                     <div class="form-group">
-                      <label for="nome">Escolha o médico a ser consultado*</label>
+                      <label for="nome">Escolha o médico*</label>
                       <select class="form-control" formControlName="medico"
                         (change)="verificaMedico($event.target.value)">
                         <option value="null" selected>SELECIONE</option>
