--- a/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
@@ -22,7 +22,7 @@
                   <div class="form-group col-md-4">
                     <div class="form-group">
                       <div>
-                        <label for="nome">Escolha o médico a ser consultado*</label>
+                        <label for="nome">Escolha o médico*</label>
                         <select class="form-control" formControlName="medico"
                           (change)="verificaValor($event.target.value)">
                           <option value="null" selected>SELECIONE</option>
