--- a/src/app/pages/configurar-clinica/list-medico/list-medico.component.html
+++ b/src/app/pages/configurar-clinica/list-medico/list-medico.component.html
@@ -69,8 +69,8 @@
                         <ngx-datatable-column [sortable]="false" name="Ações" [canAutoResize]="true">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-center p-4">
-                              <a class="home-icon" (click)="desvincular(row)" title="Associar Médico">
-                                <i class="fa fa-edit p-2"></i>
+                              <a class="home-icon" (click)="desvincular(row)" title="Desvincular Médico">
+                                <i class="fa fa-window-close p-2"></i>
                               </a>
                             </div>
                           </ng-template>
